Upgrade java and spring (#95)
* migrate to spring boot
* migrate junit4 to junit5
* upgrade spring to 2.7
* migrate jaxrs/resteasy to spring native RestController
* removed gson
* upgrade swagger
* remove joda
* Removal of guava
* Update to spring3, java17, remove guava etc
* multipart message fix
* javax2jakarta
* add fixes for missing fileContent or split for missing contentType
* Disable connection pooling to LDAP