@@ -1,16 +1,15 @@
 package no.nav.aura.envconfig.spring;
 
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.Set;
-
-import javax.inject.Inject;
-
-import org.junit.jupiter.api.BeforeEach;
+import no.nav.aura.envconfig.FasitRepository;
+import no.nav.aura.envconfig.model.ModelEntity;
 import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.springframework.boot.autoconfigure.web.servlet.WebMvcAutoConfiguration;
+import org.springframework.context.annotation.Import;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.TestingAuthenticationProvider;
 import org.springframework.security.authentication.TestingAuthenticationToken;
+import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -18,21 +17,21 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.ldap.userdetails.LdapUserDetails;
 import org.springframework.security.ldap.userdetails.LdapUserDetailsImpl;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Sets;
+import jakarta.inject.Inject;
 
-import no.nav.aura.envconfig.FasitRepository;
-import no.nav.aura.envconfig.model.ModelEntity;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.Set;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
-@ExtendWith(SpringExtension.class)
-@ContextConfiguration(classes = { SpringUnitTestConfig.class, SpringSecurityTestConfig.class })
+@SpringJUnitConfig(classes = {SpringUnitTestConfig.class, SpringSecurityTestConfig.class})
 @Transactional
+@Import(WebMvcAutoConfiguration.class)
 public abstract class SpringTest {
 
     @Inject
@@ -45,6 +44,9 @@ public abstract class SpringTest {
     protected FasitRepository unwrappedRepository;
 
     protected FasitRepository repository;
+    
+    @Inject 
+    private TestingAuthenticationProvider testingAuthProvider;
 
     @BeforeAll
     static public void setupSystemProperties() {
@@ -53,6 +55,13 @@ public abstract class SpringTest {
         System.setProperty("deployLog_v1.url", "http://somehost.com");
         System.setProperty("environment.name", "dev");
         System.setProperty("environment.class", "u");
+    }
+
+    
+    @Inject
+    public void configureGlobal(AuthenticationManagerBuilder auth) throws Exception {
+        auth.authenticationProvider(testingAuthProvider);
+
     }
 
     @BeforeEach
@@ -76,7 +85,7 @@ public abstract class SpringTest {
     }
     
     public <O> O runAsUserWithGroup(String userName, String password, String group, Function<Void, O> function) {
-        Authentication authentication = createAuthentication(userName, password, getRolesForUser(userName), Sets.newHashSet(group));
+        Authentication authentication = createAuthentication(userName, password, getRolesForUser(userName), Set.of(group));
         return runAs(authentication, function);
     }
 
@@ -86,7 +95,7 @@ public abstract class SpringTest {
 
     protected Authentication createAuthentication(String username, String password, Collection<? extends GrantedAuthority> roles, Set<String> adGroups) {
         LdapUserDetails ldapUserDetails = createLdapPrincipal(username, adGroups);
-        TestingAuthenticationToken n = new TestingAuthenticationToken(ldapUserDetails, password, Lists.newArrayList(roles));
+        TestingAuthenticationToken n = new TestingAuthenticationToken(ldapUserDetails, password, new ArrayList<>(roles));
         Authentication auth = authenticationManager.authenticate(n);
         auth.setAuthenticated(true);
         return auth;
@@ -96,11 +105,11 @@ public abstract class SpringTest {
     protected static LdapUserDetails createLdapPrincipal(String username, Set<String> groups) {
         LdapUserDetailsImpl.Essence p = new LdapUserDetailsImpl.Essence();
         p.setUsername(username);
-        p.setAuthorities(FluentIterable.from(groups).transform(new Function<String, GrantedAuthority>() {
-            public GrantedAuthority apply(String o) {
-                return new SimpleGrantedAuthority(o);
-            }
-        }).toList());
+        p.setAuthorities(
+                groups.stream()
+                    .map(o -> new SimpleGrantedAuthority(o))
+                    .collect(Collectors.toList())
+            );
         p.setDn(username);
         return p.createUserDetails();
     }
